Fix unnecessary vertical scrollbar

--- a/assets/css/widget.css
+++ b/assets/css/widget.css
@@ -1,4 +1,5 @@
 .zcw-content {
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	gap: 12px;
